--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,4 @@ framework = arduino
 extra_scripts = 
 	pre:extra_script.py
 	pre:PreBuild.py
-lib_deps = 
-	smaffer/VGAX@^1.2.0
-	arduinogetstarted/ezButton@^1.0.4
+lib_deps = smaffer/VGAX@^1.2.0
